<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/your_name"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_your_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/border_line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/your_slack_name"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etSlackName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_your_slack_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/border_line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/your_github_handle"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etGithubHandle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_your_github_handle"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/border_line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/your_personal_bio"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etPersonalDetails"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_your_personal_biography"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/border_line"/>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"/>

</LinearLayout>