<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/sky"
        app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:background="@drawable/border_line"
        android:textAllCaps="true"
        android:textColor="@color/deep_blue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stack_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="130dp"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/tvStackName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:background="@drawable/border_line"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/deep_blue"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="180dp"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/github_handle"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="250dp"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/tvGithubHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:background="@drawable/border_line"
        android:textSize="20sp"
        android:textColor="@color/deep_blue"
        android:textAlignment="center"
        android:layout_marginTop="300dp"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_bio"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="370dp"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/tvBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/deep_blue"
        android:textAlignment="center"
        android:background="@drawable/border_line"
        android:layout_marginTop="420dp"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="570dp"
        android:text="@string/edit_the_details" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>